refactor(proportion): 优化比例验证器的检查逻辑
- 提取比例提示检查逻辑到独立方法 checkRatioHints
- 移除高度与宽度比例检查中的宽度大于零条件限制
- 移除深度与宽度比例检查中的宽度大于零条件限制
- 使用 getFirst() 替代 get(0) 获取组件列表首元素